Fixed overflow in index list

--- a/ember-app/public/assets/tailwind.css
+++ b/ember-app/public/assets/tailwind.css
@@ -652,10 +652,6 @@ video {
   width: 7rem;
 }
 
-.w-\[580px\] {
-  width: 580px;
-}
-
 .w-full {
   width: 100%;
 }
@@ -708,14 +704,6 @@ video {
   --tw-space-x-reverse: 0;
   margin-right: calc(0px * var(--tw-space-x-reverse));
   margin-left: calc(0px * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.overflow-visible {
-  overflow: visible;
-}
-
-.overflow-x-auto {
-  overflow-x: auto;
 }
 
 .overflow-y-auto {
@@ -817,6 +805,11 @@ video {
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+
+.px-20 {
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
 .py-2 {
